--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <script src="tipos/tipos.js"></script>
     <script src="compilador/compilador.js"></script>
     <script src="ecmascript/ecmascript.js"></script>
+    <script src="ecmascript/exercicio.js"></script>
+    <script src="classes/classes.js"></script>
 </body>
 
 </html>
