--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <script src="ecmascript/ecmascript.js"></script>
     <script src="ecmascript/exercicio.js"></script>
     <script src="classes/classes.js"></script>
+    <script src="classes/desafio.js"></script>
+    <script src="namespaces/geometriaRect.js"></script>
+    <script src="namespaces/geometriaCirc.js"></script>
+    <script src="namespaces/namespaces.js"></script>
 </body>
 
 </html>
