--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <script src="node_modules/systemjs/dist/system.js"></script>
     <script src="introducao/basico.js"></script>
     <script src="tipos/tipos.js"></script>
     <script src="compilador/compilador.js"></script>
@@ -19,6 +20,21 @@
     <script src="namespaces/geometriaRect.js"></script>
     <script src="namespaces/geometriaCirc.js"></script>
     <script src="namespaces/namespaces.js"></script>
+    <script src="interfaces/interfaces.js"></script>
+    <!--script src="modulos/modulos.js"></script-->
+    <!--script>
+        SystemJS.config({
+            baseUrl: '/modulos',
+            packages: {
+                '/modulos': {
+                    defaultJSExtension: true
+                }
+            }
+        })
+
+        SystemJS.import('./modulos/modulos.js')
+
+    </script-->
 </body>
 
 </html>
