--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="namespaces/geometriaCirc.js"></script>
     <script src="namespaces/namespaces.js"></script>
     <script src="interfaces/interfaces.js"></script>
+    <script src="genericos/genericos.js"></script>
     <!--script src="modulos/modulos.js"></script-->
     <!--script>
         SystemJS.config({
