--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="namespaces/namespaces.js"></script>
     <script src="interfaces/interfaces.js"></script>
     <script src="genericos/genericos.js"></script>
+    <script src="decorators/decorators.js"></script>
     <!--script src="modulos/modulos.js"></script-->
     <!--script>
         SystemJS.config({
